// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render in disabled state 1`] = `
<div
  class="matrixContainer"
>
  <h2>
    Contacts
  </h2>
  <table
    class="matrix disabled"
  >
    <tbody>
      <tr
        class="row"
      >
        <td
          class="name"
        >
          people
        </td>
        <td
          class="items"
        >
          <button
            class="item selected disabled"
            title="sulu_security.view"
            type="button"
          >
            <span
              aria-label="su-eye"
              class="su-eye"
            />
          </button>
          <button
            class="item selected disabled"
            title="sulu_security.add"
            type="button"
          >
            <span
              aria-label="su-plus-circle"
              class="su-plus-circle"
            />
          </button>
          <button
            class="item selected disabled"
            title="sulu_security.edit"
            type="button"
          >
            <span
              aria-label="su-pen"
              class="su-pen"
            />
          </button>
          <button
            class="item selected disabled"
            title="sulu_security.delete"
            type="button"
          >
            <span
              aria-label="su-trash-alt"
              class="su-trash-alt"
            />
          </button>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="name"
        >
          organizations
        </td>
        <td
          class="items"
        >
          <button
            class="item selected disabled"
            title="sulu_security.view"
            type="button"
          >
            <span
              aria-label="su-eye"
              class="su-eye"
            />
          </button>
          <button
            class="item selected disabled"
            title="sulu_security.add"
            type="button"
          >
            <span
              aria-label="su-plus-circle"
              class="su-plus-circle"
            />
          </button>
          <button
            class="item selected disabled"
            title="sulu_security.edit"
            type="button"
          >
            <span
              aria-label="su-pen"
              class="su-pen"
            />
          </button>
          <button
            class="item selected disabled"
            title="sulu_security.delete"
            type="button"
          >
            <span
              aria-label="su-trash-alt"
              class="su-trash-alt"
            />
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render with empty webspace section 1`] = `
<h2>
  Webspaces
</h2>
`;

exports[`Render with empty webspace section 2`] = `
<div
  class="selectContainer"
>
  <div
    class="select"
    role="none"
  >
    <button
      class="displayValue default"
      type="button"
    >
      <div
        aria-label="sulu_admin.none_selected"
        class="croppedText"
        title="sulu_admin.none_selected"
      >
        <div
          aria-hidden="true"
          class="front"
        >
          sulu_admin.n
        </div>
        <div
          aria-hidden="true"
          class="back"
        >
          <span>
            one_selected
          </span>
        </div>
        <div
          class="whole"
        >
          sulu_admin.none_selected
        </div>
      </div>
      <span
        aria-label="su-angle-down"
        class="su-angle-down toggle"
      />
    </button>
  </div>
</div>
`;

exports[`Render with empty webspace section 3`] = `
<div
  class="matrixContainer"
/>
`;

exports[`Render with empty webspace section 4`] = `
<div
  class="matrixContainer"
>
  <h2>
    Contacts
  </h2>
  <table
    class="matrix"
  >
    <tbody>
      <tr
        class="row"
      >
        <td
          class="name"
        >
          people
        </td>
        <td
          class="items"
        >
          <button
            class="item selected"
            title="sulu_security.view"
            type="button"
          >
            <span
              aria-label="su-eye"
              class="su-eye"
            />
          </button>
          <button
            class="item selected"
            title="sulu_security.add"
            type="button"
          >
            <span
              aria-label="su-plus-circle"
              class="su-plus-circle"
            />
          </button>
          <button
            class="item selected"
            title="sulu_security.edit"
            type="button"
          >
            <span
              aria-label="su-pen"
              class="su-pen"
            />
          </button>
          <button
            class="item selected"
            title="sulu_security.delete"
            type="button"
          >
            <span
              aria-label="su-trash-alt"
              class="su-trash-alt"
            />
          </button>
          <button
            class="rowButton"
            type="button"
          >
            sulu_admin.deactivate_all
          </button>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="name"
        >
          organizations
        </td>
        <td
          class="items"
        >
          <button
            class="item selected"
            title="sulu_security.view"
            type="button"
          >
            <span
              aria-label="su-eye"
              class="su-eye"
            />
          </button>
          <button
            class="item selected"
            title="sulu_security.add"
            type="button"
          >
            <span
              aria-label="su-plus-circle"
              class="su-plus-circle"
            />
          </button>
          <button
            class="item selected"
            title="sulu_security.edit"
            type="button"
          >
            <span
              aria-label="su-pen"
              class="su-pen"
            />
          </button>
          <button
            class="item selected"
            title="sulu_security.delete"
            type="button"
          >
            <span
              aria-label="su-trash-alt"
              class="su-trash-alt"
            />
          </button>
          <button
            class="rowButton"
            type="button"
          >
            sulu_admin.deactivate_all
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render with minimal 1`] = `
<div
  class="matrixContainer"
>
  <h2>
    Contacts
  </h2>
  <table
    class="matrix"
  >
    <tbody>
      <tr
        class="row"
      >
        <td
          class="name"
        >
          people
        </td>
        <td
          class="items"
        >
          <button
            class="item selected"
            title="sulu_security.view"
            type="button"
          >
            <span
              aria-label="su-eye"
              class="su-eye"
            />
          </button>
          <button
            class="item selected"
            title="sulu_security.add"
            type="button"
          >
            <span
              aria-label="su-plus-circle"
              class="su-plus-circle"
            />
          </button>
          <button
            class="item selected"
            title="sulu_security.edit"
            type="button"
          >
            <span
              aria-label="su-pen"
              class="su-pen"
            />
          </button>
          <button
            class="item selected"
            title="sulu_security.delete"
            type="button"
          >
            <span
              aria-label="su-trash-alt"
              class="su-trash-alt"
            />
          </button>
          <button
            class="rowButton"
            type="button"
          >
            sulu_admin.deactivate_all
          </button>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="name"
        >
          organizations
        </td>
        <td
          class="items"
        >
          <button
            class="item selected"
            title="sulu_security.view"
            type="button"
          >
            <span
              aria-label="su-eye"
              class="su-eye"
            />
          </button>
          <button
            class="item selected"
            title="sulu_security.add"
            type="button"
          >
            <span
              aria-label="su-plus-circle"
              class="su-plus-circle"
            />
          </button>
          <button
            class="item selected"
            title="sulu_security.edit"
            type="button"
          >
            <span
              aria-label="su-pen"
              class="su-pen"
            />
          </button>
          <button
            class="item selected"
            title="sulu_security.delete"
            type="button"
          >
            <span
              aria-label="su-trash-alt"
              class="su-trash-alt"
            />
          </button>
          <button
            class="rowButton"
            type="button"
          >
            sulu_admin.deactivate_all
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render with webspace section 1`] = `
<h2>
  Webspaces
</h2>
`;

exports[`Render with webspace section 2`] = `
<div
  class="selectContainer"
>
  <div
    class="select"
    role="none"
  >
    <button
      class="displayValue default"
      type="button"
    >
      <div
        aria-label="Example"
        class="croppedText"
        title="Example"
      >
        <div
          aria-hidden="true"
          class="front"
        >
          Exam
        </div>
        <div
          aria-hidden="true"
          class="back"
        >
          <span>
            ple
          </span>
        </div>
        <div
          class="whole"
        >
          Example
        </div>
      </div>
      <span
        aria-label="su-angle-down"
        class="su-angle-down toggle"
      />
    </button>
  </div>
</div>
`;

exports[`Render with webspace section 3`] = `
<div
  class="matrixContainer"
>
  <div
    class="matrixContainer"
  >
    <h3>
      example
    </h3>
    <table
      class="matrix"
    >
      <tbody>
        <tr
          class="row"
        >
          <td
            class="name"
          >
            example
          </td>
          <td
            class="items"
          >
            <button
              class="item selected"
              title="sulu_security.view"
              type="button"
            >
              <span
                aria-label="su-eye"
                class="su-eye"
              />
            </button>
            <button
              class="item selected"
              title="sulu_security.add"
              type="button"
            >
              <span
                aria-label="su-plus-circle"
                class="su-plus-circle"
              />
            </button>
            <button
              class="item selected"
              title="sulu_security.edit"
              type="button"
            >
              <span
                aria-label="su-pen"
                class="su-pen"
              />
            </button>
            <button
              class="item selected"
              title="sulu_security.delete"
              type="button"
            >
              <span
                aria-label="su-trash-alt"
                class="su-trash-alt"
              />
            </button>
            <button
              class="item"
              title="sulu_security.live"
              type="button"
            >
              <span
                aria-label="su-publish"
                class="su-publish"
              />
            </button>
            <button
              class="item"
              title="sulu_security.security"
              type="button"
            >
              <span
                aria-label="su-lock"
                class="su-lock"
              />
            </button>
            <button
              class="rowButton"
              type="button"
            >
              sulu_admin.deactivate_all
            </button>
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="name"
          >
            example.analytics
          </td>
          <td
            class="items"
          >
            <button
              class="item"
              title="sulu_security.view"
              type="button"
            >
              <span
                aria-label="su-eye"
                class="su-eye"
              />
            </button>
            <button
              class="item"
              title="sulu_security.add"
              type="button"
            >
              <span
                aria-label="su-plus-circle"
                class="su-plus-circle"
              />
            </button>
            <button
              class="item"
              title="sulu_security.edit"
              type="button"
            >
              <span
                aria-label="su-pen"
                class="su-pen"
              />
            </button>
            <button
              class="item"
              title="sulu_security.delete"
              type="button"
            >
              <span
                aria-label="su-trash-alt"
                class="su-trash-alt"
              />
            </button>
            <button
              class="rowButton"
              type="button"
            >
              sulu_admin.activate_all
            </button>
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="name"
          >
            example.default-snippets
          </td>
          <td
            class="items"
          >
            <button
              class="item"
              title="sulu_security.view"
              type="button"
            >
              <span
                aria-label="su-eye"
                class="su-eye"
              />
            </button>
            <button
              class="item"
              title="sulu_security.add"
              type="button"
            >
              <span
                aria-label="su-plus-circle"
                class="su-plus-circle"
              />
            </button>
            <button
              class="item"
              title="sulu_security.edit"
              type="button"
            >
              <span
                aria-label="su-pen"
                class="su-pen"
              />
            </button>
            <button
              class="item"
              title="sulu_security.delete"
              type="button"
            >
              <span
                aria-label="su-trash-alt"
                class="su-trash-alt"
              />
            </button>
            <button
              class="rowButton"
              type="button"
            >
              sulu_admin.activate_all
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render with webspace section 4`] = `
<div
  class="matrixContainer"
>
  <h2>
    Contacts
  </h2>
  <table
    class="matrix"
  >
    <tbody>
      <tr
        class="row"
      >
        <td
          class="name"
        >
          people
        </td>
        <td
          class="items"
        >
          <button
            class="item selected"
            title="sulu_security.view"
            type="button"
          >
            <span
              aria-label="su-eye"
              class="su-eye"
            />
          </button>
          <button
            class="item selected"
            title="sulu_security.add"
            type="button"
          >
            <span
              aria-label="su-plus-circle"
              class="su-plus-circle"
            />
          </button>
          <button
            class="item selected"
            title="sulu_security.edit"
            type="button"
          >
            <span
              aria-label="su-pen"
              class="su-pen"
            />
          </button>
          <button
            class="item selected"
            title="sulu_security.delete"
            type="button"
          >
            <span
              aria-label="su-trash-alt"
              class="su-trash-alt"
            />
          </button>
          <button
            class="rowButton"
            type="button"
          >
            sulu_admin.deactivate_all
          </button>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="name"
        >
          organizations
        </td>
        <td
          class="items"
        >
          <button
            class="item selected"
            title="sulu_security.view"
            type="button"
          >
            <span
              aria-label="su-eye"
              class="su-eye"
            />
          </button>
          <button
            class="item selected"
            title="sulu_security.add"
            type="button"
          >
            <span
              aria-label="su-plus-circle"
              class="su-plus-circle"
            />
          </button>
          <button
            class="item selected"
            title="sulu_security.edit"
            type="button"
          >
            <span
              aria-label="su-pen"
              class="su-pen"
            />
          </button>
          <button
            class="item selected"
            title="sulu_security.delete"
            type="button"
          >
            <span
              aria-label="su-trash-alt"
              class="su-trash-alt"
            />
          </button>
          <button
            class="rowButton"
            type="button"
          >
            sulu_admin.deactivate_all
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
